[gd_scene load_steps=14 format=3 uid="uid://o16ibklgbwm0"]

[ext_resource type="Script" uid="uid://c15ko3o0l3m7u" path="res://scripts/Info_board.gd" id="1_127g8"]
[ext_resource type="Texture2D" uid="uid://bd6xfldxd081f" path="res://assets/items/sheet.png" id="1_ooonm"]
[ext_resource type="FontFile" uid="uid://jss3joppgef5" path="res://assets/fonts/lucasarts-scumm-outline.fnt" id="2_ntv4s"]
[ext_resource type="Texture2D" uid="uid://cs4b1ocgjip02" path="res://assets/items/tile_0017.png" id="3_onw1a"]
[ext_resource type="Texture2D" uid="uid://bodo3ximou3l" path="res://assets/ui/Sprite_png/close button.png" id="3_ooonm"]
[ext_resource type="AudioStream" uid="uid://cjcnqrxa8wkw6" path="res://assets/sounds/051_use_item_01.wav" id="4_ntv4s"]

[sub_resource type="AtlasTexture" id="AtlasTexture_127g8"]
atlas = ExtResource("1_ooonm")
region = Rect2(68, 102, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_6as0f"]
atlas = ExtResource("1_ooonm")
region = Rect2(34, 102, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntv4s"]
atlas = ExtResource("1_ooonm")
region = Rect2(0, 136, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jcck"]
atlas = ExtResource("1_ooonm")
region = Rect2(0, 0, 34, 34)

[sub_resource type="SpriteFrames" id="SpriteFrames_0euye"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_127g8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6as0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntv4s")
}],
"loop": true,
"name": &"found",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jcck")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_hnj0v"]
radius = 60.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_127g8"]
texture = ExtResource("3_onw1a")

[node name="InfoBoard" type="Node2D"]
script = ExtResource("1_127g8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_0euye")
animation = &"found"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_hnj0v")

[node name="Label" type="Label" parent="."]
offset_left = -77.0
offset_top = -65.0
offset_right = 100.0
offset_bottom = -44.375
theme_override_fonts/font = ExtResource("2_ntv4s")
theme_override_font_sizes/font_size = 30
text = "Press I to open"

[node name="QuotePopup" type="Panel" parent="."]
visible = false
z_index = 20
offset_left = -256.0
offset_top = -123.0
offset_right = 273.0
offset_bottom = 264.0
theme_override_styles/panel = SubResource("StyleBoxTexture_127g8")

[node name="QuoteLabel" type="Label" parent="QuotePopup"]
layout_mode = 0
offset_left = 116.0
offset_top = 82.0
offset_right = 415.0
offset_bottom = 309.0
theme_override_fonts/font = ExtResource("2_ntv4s")
theme_override_font_sizes/font_size = 35
horizontal_alignment = 1
autowrap_mode = 3

[node name="CloseButton" type="TextureButton" parent="QuotePopup"]
modulate = Color(1, 1, 0.878431, 1)
layout_mode = 0
offset_left = 428.0
offset_top = 15.0
offset_right = 500.0
offset_bottom = 76.0
action_mode = 0
texture_normal = ExtResource("3_ooonm")
stretch_mode = 0

[node name="CloseClickSound" type="AudioStreamPlayer2D" parent="QuotePopup/CloseButton"]
stream = ExtResource("4_ntv4s")
